sharing dma buf

--- a/src/main/jni/CMakeLists.txt
+++ b/src/main/jni/CMakeLists.txt
@@ -41,6 +41,8 @@ target_link_libraries( # Specifies the target library.
         # included in the NDK.
         ${log-lib}
         EGL
+        GLESv3
         GLESv1_CM
+        GLESv2
         android
         )
