--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 30
     ndkVersion "21.4.7075529"
     externalNativeBuild {
         cmake {
@@ -23,12 +23,15 @@ android {
         }
     }
 
-//    defaultConfig {
+    defaultConfig {
+        ndk {
+            abiFilters 'arm64-v8a'
+        }
 //        ndk {
 //            moduleName "nativeegl"
 //            ldLibs "log", "android", "EGL", "GLESv1_CM"
 //        }
-//    }
+    }
 }
 
 
